--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -5,7 +5,12 @@
             app:startDestination="@id/mainFragment">
 
     <fragment android:id="@+id/mainFragment" android:name="com.lonchi.andrej.findrest.MainFragment"
-              android:label="fragment_main" tools:layout="@layout/fragment_main"/>
+              android:label="fragment_main" tools:layout="@layout/fragment_main">
+        <action android:id="@+id/actionToSearch" app:destination="@id/searchFragment"
+                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"/>
+        <action android:id="@+id/actionToFavourites" app:destination="@id/favouritesFragment"
+                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"/>
+    </fragment>
     <fragment android:id="@+id/searchFragment" android:name="com.lonchi.andrej.findrest.SearchFragment"
               android:label="fragment_search" tools:layout="@layout/fragment_search"/>
     <fragment android:id="@+id/favouritesFragment" android:name="com.lonchi.andrej.findrest.FavouritesFragment"
