--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,26 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:background="@color/scheme1Grey"
+        tools:context=".UI.MainActivity">
 
-    <fragment android:layout_width="match_parent" android:layout_height="match_parent"
+    <fragment android:layout_width="match_parent" android:layout_height="0dp"
               android:id="@+id/nav_host_fragment"
               android:name="androidx.navigation.fragment.NavHostFragment"
               app:navGraph="@navigation/navigation_graph"
-              app:defaultNavHost="true" />
+              app:defaultNavHost="true"
+              app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView android:layout_width="match_parent"
+                                                                       android:layout_height="wrap_content"
+                                                                       android:id="@+id/bottom_nav_view"
+                                                                       app:menu="@menu/bottom_nav_menu"
+                                                                       android:background="@color/scheme1Red"
+
+                                                                       app:layout_constraintBottom_toBottomOf="parent"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
