--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,21 +4,56 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".MainFragment" android:id="@+id/constraitLayout">
+                                                   android:background="@drawable/image_bg"
+                                                   tools:context=".UI.MainFragment" android:id="@+id/constraitLayout">
     <Button
             android:text="@string/btn_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_search" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/btn_favourites"/>
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:background="@drawable/bg_button_search"
+            android:textColor="@color/scheme1Red"
+            android:id="@+id/btn_search"
+            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_geocode"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+
     <Button
-            android:text="@string/btn_favourites"
+            android:text="@string/btn_geocode"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:background="@drawable/bg_button_nearby"
+            android:textColor="@color/scheme1WhiteA10"
+            android:id="@+id/btn_geocode"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginBottom="64dp"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:background="@drawable/bg_input_pill"
+            android:textColor="@color/scheme1WhiteA10"
+            android:textColorHint="@color/scheme1WhiteA6"
+            android:id="@+id/et_search" android:layout_marginStart="48dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginEnd="48dp"
+            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/et_search"
+            app:layout_constraintTop_toBottomOf="@+id/tvSearchIntro"/>
+    <TextView
+            android:text="@string/what_are_you_looking_for"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_favourites"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_search"/>
+            android:id="@+id/tvSearchIntro"
+            android:textColor="@color/scheme1WhiteA10"
+            android:textSize="16sp" android:textStyle="bold"
+            android:textAllCaps="true"
+            android:layout_marginEnd="48dp"
+            android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
