Dones: - Reorganise Repository - Restaurant ViewModel - Comments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@color/scheme1Grey</color>
-    <color name="colorPrimaryDark">#000</color>
+    <color name="colorPrimaryDark">@color/scheme1Black</color>
     <color name="colorAccent">@color/scheme1Grey</color>
 
     <!--    Pallete 1   -->
     <color name="scheme1Red">#F97350</color>
     <color name="scheme1Yellow">#FAD06C</color>
     <color name="scheme1Grey">#F7F2E5</color>
+    <color name="scheme1Black">#CC000000</color>
     <color name="scheme1Brown">#B7AC9A</color>
     <color name="scheme1WhiteA10">#FFFFFF</color>
     <color name="scheme1WhiteA9">#B3FFFFFF</color>
