--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,10 +10,11 @@
             android:text="@string/btn_search"
             android:layout_width="200dp"
             android:layout_height="45dp"
+            android:elevation="5dp"
             android:background="@drawable/bg_button_search"
             android:textColor="@color/scheme1Red"
             android:id="@+id/btn_search"
-            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_geocode"
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/btn_geocode"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
@@ -21,6 +22,7 @@
             android:text="@string/btn_geocode"
             android:layout_width="200dp"
             android:layout_height="45dp"
+            android:elevation="5dp"
             android:background="@drawable/bg_button_nearby"
             android:textColor="@color/scheme1WhiteA10"
             android:id="@+id/btn_geocode"
